Reverted edits by [[Special:Contributions/Alex K|Alex K]] ([[User talk:Alex K|Talk]]) to last version by [[User:SieBot|SieBot]]

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -8,7 +8,7 @@
 | Глава = [[Ви́кторъ Ю́щєнко]]
 | Пространиѥ = 603 700 к҃м²
 | Людии = 46,4 лєѡ́дръ
-| Почѧта = 862 лѣто · ꙗко лѣтописи пьсано ѥ́стъ
+| Почѧта = 1991
 }}
 '''Оукра́ина''' и {{lang-uk|Україна}} · въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] дрьжа́ва ѥ́стъ ⁙ Cто́льнъ гра́дъ [[Кꙑ́ѥвъ]] ѥ́стъ ⁙ Оукра́инꙑ дрьжа́вьнъ [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] ѩꙁꙑ́къ ѥ́стъ ⁙ Люди́и 46,4 лєѡ́дръ обита́ѥтъ
 
