*Empty MediaWiki Message*

--- a/Коꙁаци.mw
+++ b/Коꙁаци.mw
@@ -1,6 +1,6 @@
-[[Дѣ́ло:22. Kozak z golovoju tatarina.jpg|thumb|200px|Коꙁакъ с главою татарина ѥ́стъ ]]
+[[Дѣ́ло:22. Kozak z golovoju tatarina.jpg|thumb|200px|Коꙁакъ съ главоѭ татарина]]
 
-'''Коꙁаки''' и {{lang-uk|козаки}} · въсточьнословѣ́́ньскъ наро́дъ ѥ́стъ ⁙ Обита́ѭтъ [[Оукра́ина|Оукра́инѣ]] · [[Рѡсі́ꙗ|Рѡсі́и]] ⁙ Коꙁаць ро́дьнъ ѩꙁꙑ́къ [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] ѥ́стъ ⁙  Своѥ́ и́мѧ коꙁаки от и́мєнє ''qazaq'' имѫтъ ⁙ Вѣ́рьни [[Бо́гъ|Бо́гоу]] лю́диѥ бо́л҄ьшємь чисмєнь́мь [[Правосла́виѥ|правосла́вьни]] сѫ́тъ
+'''Каꙁаки''' и {{lang-uk|козаки}} · въсточьнословѣ́ньскъ сѷбєѳносъ ѥ́стъ ⁙ Обита́ѭтъ [[Оукра́ина|Оукра́инѣ]] · [[Рѡсі́ꙗ|Рѡсі́и]] ⁙ Каꙁаць ро́дьна ѩꙁꙑка [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] ѥстє́ ⁙  Своѥ́ и́мѧ каꙁаки от слова ''qazaq'' имѫтъ ⁙ Вѣ́рьни [[Бо́гъ|Бо́гоу]] лю́диѥ бо́л҄ьшємь чисмєнь́мь [[Правосла́виѥ|правосла́вьни]] сѫ́тъ
 
 [[Category:Словѣ́нє]]
 
