--- a/Коꙁаци.mw
+++ b/Коꙁаци.mw
@@ -1,6 +1,8 @@
-[[Дѣ́ло:22. Kozak z golovoju tatarina.jpg|thumb|200px|Коꙁакъ съ главоѭ татарина]]
+[[Дѣ́ло:22. Kozak z golovoju tatarina.jpg|thumb|200px|Каꙁакъ съ главоѭ татарина]]
 
-'''Каꙁаки''' и {{lang-uk|козаки}} · въсточьнословѣ́ньскъ сѷбєѳносъ ѥ́стъ ⁙ Обита́ѭтъ [[Оукра́ина|Оукра́инѣ]] · [[Рѡсі́ꙗ|Рѡсі́и]] ⁙ Каꙁаць ро́дьна ѩꙁꙑка [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] ѥстє́ ⁙  Своѥ́ и́мѧ каꙁаки от слова ''qazaq'' имѫтъ ⁙ Вѣ́рьни [[Бо́гъ|Бо́гоу]] лю́диѥ бо́л҄ьшємь чисмєнь́мь [[Правосла́виѥ|правосла́вьни]] сѫ́тъ
+'''Каꙁаци''' и {{lang-uk|козаки}} · въсточьнословѣ́ньскъ сѷбєѳносъ ѥ́стъ ⁙ Обита́ѭтъ [[Оукра́ина|Оукра́инѣ]] · [[Рѡсі́ꙗ|Рѡсі́и]] ⁙ Каꙁаць ро́дьна ѩꙁꙑка [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] ѥстє́ ⁙  Своѥ́ и́мѧ каꙁаци от слова ''qazaq'' имѫтъ ⁙ Вѣ́рьни [[Бо́гъ|Бо́гоу]] лю́диѥ бо́л҄ьшємь чисмєнь́мь [[Правосла́виѥ|правосла́вьни]] сѫ́тъ
+
+Ꙃ҃І вѣцѣ Доньска рать и Ꙁапорожьска сьчь сътворѥна ѥстє́ · онижє двѣ наибол҄иѩ каꙁачьскꙑ обьщи́на бѣашєтє́
 
 [[Category:Словѣ́нє]]
 
