*Empty MediaWiki Message*

--- a/Парижь.mw
+++ b/Парижь.mw
@@ -2,10 +2,10 @@
 | знамѧ= Flag of Paris.svg
 | знакъ = Blason paris.png
 | Дрьжава = {{Франкїѩ знамѧ}}Франкї
-| Глава = 
+| Глава = 25 ans
 | Людии = 2200 тысѫщь
-| Основанъ = 
-| Харта = 
+| Основанъ = 25ans
+| Харта = il y a deux ans
 |}}
 '''Пари́жь''' (как дрѹгъ образъ: Парсїѥ, по [[грьчьскъ ѩзыкъ|грьчьскѹ]] ѩзыкѹ. [[Франкїискъ ѩзыкъ|франкїиськы]] ''Paris'') [[Франкї|Франкїѩ]] [[стольнъ градъ]] ѥстъ. Людии обитаѥтъ 2200 тысѫщь. Построѥнъ рѣцѣ [[Сикѹана]].
 
