Reverted edits by [[Special:Contributions/79.211.202.74|79.211.202.74]] ([[User talk:79.211.202.74|Talk]]) to last version by [[User:SpBot|SpBot]]

--- a/Парижь.mw
+++ b/Парижь.mw
@@ -1,3 +1,190 @@
-Well, at least it is now understandable. This writing of yours... wow I can´t even tell what language it is :-)
+{{Градъ|Имѧ = Парижь
+| знамѧ= Flag of Paris.svg
+| знакъ = Blason paris.png
+| Дрьжава = {{Франкїѩ знамѧ}}Франкї
+| Глава = 
+| Людии = 2200 тысѫщь
+| Основанъ = 
+| Харта = 
+|}}
+'''Пари́жь''' (как дрѹгъ образъ: Парсїѥ, по [[грьчьскъ ѩзыкъ|грьчьскѹ]] ѩзыкѹ. [[Франкїискъ ѩзыкъ|франкїиськы]] ''Paris'') [[Франкї|Франкїѩ]] [[стольнъ градъ]] ѥстъ. Людии обитаѥтъ 2200 тысѫщь. Построѥнъ рѣцѣ [[Сикѹана]].
 
-Paris is a town in France, the capital. Search in google.
+----
+
+<gallery>
+Image:Eiffelturm1.jpg|Ефела стлъпъ
+Image:Paris-notre-dame-facade.jpg|Парижьскы Божиѩ Матере съборьна црькы
+Image:Moulin rouge.jpg|Ѳеатро «Мѹленъ Рѹжъ»
+</gallery>
+{{commonscat|Paris}}
+[[Category:Гради]]
+[[Category:Стольни гради]]
+[[Category:Франкї]]
+
+{{Link FA|fr}}
+
+{{Link FA|vi}}
+
+{{Link FA|bg}}
+{{Link FA|eo}}
+
+{{Link FA|he}}
+
+[[af:Parys]]
+[[als:Paris (Stadt)]]
+[[am:ፓሪስ]]
+[[an:París]]
+[[ang:Paris]]
+[[ar:باريس]]
+[[arc:ܦܪܝܣ]]
+[[arz:باريس]]
+[[ast:París]]
+[[az:Paris]]
+[[ba:Париж]]
+[[bar:Paris]]
+[[bat-smg:Parīžios]]
+[[bcl:Paris]]
+[[be:Горад Парыж]]
+[[be-x-old:Парыж]]
+[[bg:Париж]]
+[[bi:Paris]]
+[[bn:প্যারিস]]
+[[bo:ཕ་རིས]]
+[[br:Pariz]]
+[[bs:Pariz]]
+[[ca:París]]
+[[ceb:Paris]]
+[[crh:Paris]]
+[[cs:Paříž]]
+[[cv:Парис]]
+[[cy:Paris]]
+[[da:Paris]]
+[[de:Paris]]
+[[diq:Paris]]
+[[dsb:Paris]]
+[[el:Παρίσι]]
+[[en:Paris]]
+[[eo:Parizo]]
+[[es:París]]
+[[et:Pariis]]
+[[eu:Paris]]
+[[fa:پاریس]]
+[[fi:Pariisi]]
+[[fiu-vro:Pariis]]
+[[fo:Paris]]
+[[fr:Paris]]
+[[frp:Paris]]
+[[fur:Parîs]]
+[[fy:Parys]]
+[[ga:Páras]]
+[[gan:巴黎]]
+[[gd:Paris]]
+[[gl:París - Paris]]
+[[gv:Paarys]]
+[[haw:Palika]]
+[[he:פריז]]
+[[hi:पेरिस]]
+[[hr:Pariz]]
+[[hu:Párizs]]
+[[hy:Փարիզ]]
+[[ia:Paris]]
+[[id:Paris]]
+[[ilo:Paris, Francia]]
+[[io:Paris]]
+[[is:París]]
+[[it:Parigi]]
+[[ja:パリ]]
+[[jbo:Paris]]
+[[jv:Paris]]
+[[ka:პარიზი]]
+[[kab:Paris]]
+[[kk:Париж]]
+[[kn:ಪ್ಯಾರಿಸ್]]
+[[ko:파리 (도시)]]
+[[ksh:Paris]]
+[[ku:Parîs]]
+[[kv:Париж]]
+[[kw:Paris]]
+[[ky:Париж]]
+[[la:Lutetia]]
+[[lad:Paris]]
+[[lb:Paräis]]
+[[li:Paries]]
+[[lij:Pariggi]]
+[[lmo:Paris]]
+[[ln:Pari]]
+[[lt:Paryžius]]
+[[lv:Parīze]]
+[[mg:Paris]]
+[[mk:Париз]]
+[[ml:പാരിസ്]]
+[[mn:Парис]]
+[[mr:पॅरिस]]
+[[ms:Paris]]
+[[my:ပဲရစ်]]
+[[myv:Париж ош]]
+[[mzn:پاریس]]
+[[na:Paris]]
+[[nah:Parisi]]
+[[nap:Parigge]]
+[[nds:Paris]]
+[[ne:पेरिस]]
+[[nl:Parijs]]
+[[nn:Paris]]
+[[no:Paris]]
+[[nov:Paris]]
+[[oc:París]]
+[[os:Париж]]
+[[pa:ਪੈਰਿਸ]]
+[[pam:Paris]]
+[[pdc:Paris]]
+[[pl:Paryż]]
+[[pms:Paris]]
+[[ps:پاريس]]
+[[pt:Paris]]
+[[qu:Paris]]
+[[ro:Paris]]
+[[roa-rup:Parij]]
+[[roa-tara:Parigge]]
+[[ru:Париж]]
+[[sah:Париж]]
+[[sc:Parigi]]
+[[scn:Pariggi]]
+[[sco:Paris]]
+[[se:Paris]]
+[[sh:Pariz]]
+[[simple:Paris]]
+[[sk:Paríž]]
+[[sl:Pariz]]
+[[so:Paris]]
+[[sq:Parisi]]
+[[sr:Париз]]
+[[stq:Paris]]
+[[sv:Paris]]
+[[sw:Paris]]
+[[szl:Paryž]]
+[[ta:பாரிஸ்]]
+[[tet:París]]
+[[tg:Париж]]
+[[th:ปารีส]]
+[[tl:Paris]]
+[[tpi:Paris]]
+[[tr:Paris]]
+[[ty:Paris]]
+[[udm:Париж]]
+[[ug:Parij]]
+[[uk:Париж]]
+[[ur:پیرس]]
+[[uz:Parij]]
+[[vec:Parixe]]
+[[vi:Paris]]
+[[vls:Parys]]
+[[vo:Paris]]
+[[wa:Paris]]
+[[war:Paris]]
+[[wo:Paris]]
+[[yi:פאריז]]
+[[zh:巴黎]]
+[[zh-classical:巴黎]]
+[[zh-min-nan:Pa-lí]]
+[[zh-yue:巴黎]]
