*Empty MediaWiki Message*

--- a/Парижь.mw
+++ b/Парижь.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = 
 |}}
-'''Пари́жь''' (как дрѹгъ образъ: Парсїѥ, по [[грьчьскъ ѩзыкъ|грьчьскѹ]] ѩзыкѹ. [[Франкїискъ ѩзыкъ|франкїиськы]] ''Paris'') [[Франкї|Франкїѩ]] [[стольнъ градъ]] ѥстъ. Людии обитаѥтъ 2200 тысѫщь. Построѥнъ рѣцѣ [[Сикѹана]].
+'''Пари́жь''' (как дрѹгъ образъ: Парсїѥ, по [[грьчьскъ ѩзыкъ|грьчьскѹ]] ѩзыкѹ. [[Франкїискъ ѩзыкъ|франкїиськы]] ''Paris'') [[Франкі́ꙗ|Франкїѩ]] [[стольнъ градъ]] ѥстъ. Людии обитаѥтъ 2200 тысѫщь. Построѥнъ рѣцѣ [[Сикѹана]].
 
 ----
 
@@ -19,7 +19,7 @@ Image:Moulin rouge.jpg|Ѳеатро «Мѹленъ Рѹжъ»
 {{commonscat|Paris}}
 [[Category:Гради]]
 [[Category:Стольни гради]]
-[[Category:Франкї]]
+[[Category:Франкі́ꙗ]]
 
 {{Link FA|fr}}
 
