*Empty MediaWiki Message*

--- a/Пєтръ_А҃_·_блъгарьскъ.mw
+++ b/Пєтръ_А҃_·_блъгарьскъ.mw
@@ -1,4 +1,4 @@
-'''Петръ А''' ({{Lang-bg|Петър I}}) (927—971) [[Блъгарї|Блъгарьска]] цѣсарьства цѣсар҄ь бѣ. Ѥгоже [[стольнъ градъ]] [[Прѣславъ]] бѣ.
+'''Пєтръ А''' ({{Lang-bg|Петър I}}) (927—971) [[Блъгарї|Блъгарьска]] цѣсарьства цѣсар҄ь бѣ. Ѥгожє [[стольнъ градъ]] [[Прѣславъ]] бѣ.
 
 
 [[Category:Блъгарї]]
