*Empty MediaWiki Message*

--- a/Прѣѩславл҄ь_·_Блъгарїи.mw
+++ b/Прѣѩславл҄ь_·_Блъгарїи.mw
@@ -6,12 +6,12 @@
 | знамѧ= 
 | знакъ = 
 | Дрьжава = {{Блъгарїѩ знамѧ}} [[Блъгарі́ꙗ]]
-| Глава = 
+| Глава =
 | Людии = 9612
-| Основанъ = 
-| Харта = [[Видъ:Preslaw Bulgaria 1994 CIA map.jpg|200 px]]
+| Основанъ =
+| Харта = [[Дѣ́ло:Preslaw Bulgaria 1994 CIA map.jpg|200 px]]
 |}}
-'''Прѣѩславл҄ь''' инако '''Прѣславъ''' ({{Lang-bg|Велики Преслав, Преслав}}) [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[гра́дъ]] ѥ́стъ ⁙ [[Блъгарьско цѣсарьство|Блъгарьска цѣсарьства]] по приѩтии [[Хрїстїаньство|Хрїстовы вѣры]] [[сто́льнъ гра́дъ]] въ [[Пльсковъ (Блъгарі́ꙗ)|Пльсковѹ]] поганьскѹ стольнѹ градѹ противьность бѣ. Люди́и обита́ѥтъ 9,722.
+'''Прѣѩславл҄ь''' инако '''Прѣславъ''' ({{Lang-bg|Велики Преслав, Преслав}}) [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[гра́дъ]] ѥ́стъ ⁙ [[Блъгарьско цѣсарьство|Блъгарьска цѣсарьства]] по приѩтии [[Хрїстїаньство|Хрїстовꙑ вѣрꙑ]] [[сто́льнъ гра́дъ]] въ [[Пльсковъ (Блъгарі́ꙗ)|Пльсковоу]] поганьскоу стольноу градоу противьность бѣ. Люди́и обита́ѥтъ 9,722.
 
 {{Блъгарі́ѩ гра́ди}}
 {{Шоумєнскы области гради}}
