*Empty MediaWiki Message*

--- a/Мєтро.mw
+++ b/Мєтро.mw
@@ -1,5 +1,5 @@
-[[Видъ:Platinum-Iridium meter bar.jpg|thumb|Образьць]]
-'''Метро''' (''кратъко '''м҃''') мѣра по [[Междѹнародьнъ мѣръ сѷстима|ММС]] ѥстъ. Ѥдьно метро равьно ѥстъ свѣтѹ проходѧщѹ [[деѵтеролепто|деѵтеролепта]] <sup>1</sup>/<sub>299.792.458</sub> чѧсть. 
+[[Дѣ́ло:Platinum-Iridium meter bar.jpg|thumb|Обраꙁьць]]
+'''Мє́тро''' и кратъко '''м҃''' · мѣра по [[Междѹнародьнъ мѣръ сѷстима|ММ҃С]] ѥ́стъ ⁙ Ѥдьно мє́тро равьно ѥ́стъ свѣтоу проходѧщоу [[дєѵтєролєпто|дєѵтєролєпта]] <sup>1</sup>/<sub>299.792.458</sub> чѧсть
 
 [[Category:Междѹнародьнъ мѣръ сѷстима]]
 
