robot  Modifying: [[th:ซาร์ปีเตอร์ที่ 1 แห่งรัสเซีย]]

--- a/Пєтръ_Вєликꙑи.mw
+++ b/Пєтръ_Вєликꙑи.mw
@@ -74,7 +74,7 @@
 [[sw:Peter I wa Urusi]]
 [[ta:ரஷ்யாவின் முதலாம் பீட்டர்]]
 [[tg:Пётр I Вели́кий]]
-[[th:สมเด็จพระเจ้าซาร์ปีเตอร์ที่ 1 แห่งรัสเซีย]]
+[[th:ซาร์ปีเตอร์ที่ 1 แห่งรัสเซีย]]
 [[tr:I. Petro (Rusya)]]
 [[tt:Piter I]]
 [[uk:Петро I Олексійович]]
