--- a/Бѣла_Роусь.mw
+++ b/Бѣла_Роусь.mw
@@ -164,7 +164,7 @@
 [[sr:Белорусија]]
 [[sv:Vitryssland]]
 [[sw:Belarus]]
-[[szl:Bjouoruś]]
+[[szl:Bjołoruś]]
 [[ta:பெலருஸ்]]
 [[tg:Беларус]]
 [[th:ประเทศเบลารุส]]
