robot  Modifying: [[br:Rostov-an-Don]]

--- a/Растовъ_на_Донѣ.mw
+++ b/Растовъ_на_Донѣ.mw
@@ -19,7 +19,7 @@
 [[ar:روستوف-نا-دونو]]
 [[be:Горад Растоў-на-Доне]]
 [[bg:Ростов на Дон]]
-[[br:Rostov-war-Don]]
+[[br:Rostov-an-Don]]
 [[ca:Rostov del Don]]
 [[cs:Rostov na Donu]]
 [[cv:Тан çинчи Ростов]]
