*Empty MediaWiki Message*

--- a/Отьчє_нашь.mw
+++ b/Отьчє_нашь.mw
@@ -13,7 +13,7 @@
 </poem>
 
 == ꙁьри́ та́кождє ==
-
+{{commonscat|Lord's Prayer}}
 * [[oldwikisource:Отче нашъ|О́тьчє на́шъ - Wikisource]]
 
 [[Category:Хрїстїа́ньство]]
