--- a/Тигрин҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Тигрин҄ьскъ_ѩꙁꙑкъ.mw
@@ -153,6 +153,7 @@
 [[fi:Tigrinja]]
 [[fr:Tigrinya]]
 [[he:תיגרינית]]
+[[hu:Tigrinya nyelv]]
 [[id:Bahasa Tigrinya]]
 [[it:Lingua tigrina]]
 [[ja:ティグリニャ語]]
