*Empty MediaWiki Message*

--- a/Дємиръ_Капиꙗ.mw
+++ b/Дємиръ_Капиꙗ.mw
@@ -1,15 +1,16 @@
-{{Градъ|Имѧ = Демиръ Капиꙗ
+{{coord|display=title|41|23|54|N|22|13|43|E|type:city}}
+{{Градъ|Имѧ = Дємиръ Капиꙗ
 | знамѧ= 
 | знакъ = Demir-Kapiya-Gerb.jpg
-| Дрьжава ={{Македонїѩ знамѧ}} [[Македонїꙗ]]
-| Глава = 
-| Людии = 3275 
-| Основанъ = 
-| Харта = 
+| Дрьжава ={{Македонїѩ знамѧ}} [[Макєдоні́ꙗ]]
+| Глава =
+| Людии = 3275
+| Основанъ =
+| Харта =
 }}
-'''Деми́ръ Капиꙗ''' ({{Lang-mk|Демир Капија}}, [[тӱрчьскъ ѩзыкъ|тӱрчьска]] ѩзыка словесѣ «Желѣзна врата») [[Македонїꙗ|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 3275. Зьданъ [[Вардаръ|Вардарѣ]] рѣцѣ ѥстъ.
+'''Дєми́ръ Ка́пиꙗ''' и {{Lang-mk|Демир Капија}} {{audio-IPA|Mk-Demir Kapija.ogg|[ˌdɛmir ˈkapija]}} · [[тѵ́рчьскъ ѩꙁꙑ́къ|тѵ́рчьска]] ѩꙁꙑка словєсѣ ⁖ Жєлѣꙁна врата ⁖ · [[Макєдоні́ꙗ|Макєдоні́ѩ]] Дємирькапи́искꙑ обьщинꙑ гла́вьнъ град́ъ ѥстъ ⁙ Люди́и обита́ѥтъ 3275 ⁙ ꙁьданъ [[Вардаръ|Вардарѣ]] рѣцѣ ѥ́стъ
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 
 {{Македонїѩ гради}}
 [[Category:Гради]]
