*Empty MediaWiki Message*

--- a/Ꙃвѣꙁда.mw
+++ b/Ꙃвѣꙁда.mw
@@ -1,5 +1,5 @@
-'''Sвѣзда''' ѥстъ небесьно тѣло подобьноѥ нашемѹ [[Слъньце|Слъньцѹ]]. За ѹдалѥниѥмь великомь о Землѩ ѕвѣзда авлѥтъ сѧ акы свѣтьла тъчьца ночьнаѥго небесе. 
-==Зьри тако же==
+'''Sвѣꙁда''' ѥстъ нєбєсьно тѣло подобьноѥ нашємоу [[Слъньце|Слъньцоу]]. ꙁа оудалѥниѥмь вєликомь о ꙁємлѩ ꙃвѣꙁда авлꙗѥтъ сѧ акꙑ свѣтьла тъчьца ночьнаѥго нєбєсє.
+==ꙁьри тако жє==
 * [[Слъньце]]
 
 [[Category:Ꙃвѣꙁ́дꙑ]]
