*Empty MediaWiki Message*

--- a/Ꙃвѣꙁда.mw
+++ b/Ꙃвѣꙁда.mw
@@ -1,4 +1,4 @@
-'''Sвѣꙁда''' ѥстъ нєбєсьно тѣло подобьноѥ нашємоу [[Слъньце|Слъньцоу]]. ꙁа оудалѥниѥмь вєликомь о ꙁємлѩ ꙃвѣꙁда авлꙗѥтъ сѧ акꙑ свѣтьла тъчьца ночьнаѥго нєбєсє.
+'''Sвѣꙁда''' ѥстъ нєбєсьно тѣло подобьноѥ нашємоу [[Слъньцє|Слъньцоу]]. ꙁа оудалѥниѥмь вєликомь о ꙁємлѩ ꙃвѣꙁда авлꙗѥтъ сѧ акꙑ свѣтьла тъчьца ночьнаѥго нєбєсє.
 ==ꙁьри тако жє==
 * [[Слъньце]]
 
