*Empty MediaWiki Message*

--- a/Вєлика_Британїꙗ.mw
+++ b/Вєлика_Британїꙗ.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Велика Британї 
+{{Дрьжава|name = Вѣлика Британїꙗ
 | знамѧ= [[Видъ:Flag of the United Kingdom.svg|150px]]
 | знакъ = [[Ви́дъ:UK Royal Coat of Arms.svg|150px]]
 | map = EU location UK.png 
@@ -6,10 +6,10 @@
 | Ѩзыкъ = [[англїискъ ѩзыкъ|англїискъ]]
 | Глава = 
 | area =
-| Людии = 60 леѡдръ
+| Людии = 60 лѣѡдръ
 | Почѧта = 1801
 }}
-'''Велика Британї''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Великы Британїѩ и Сѣверьны Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}})  [[Еѵрѡпа|Еѵрѡпы]] сѣвера  дрьжава ѥстъ. Cтольнъ градъ [[Лондонъ]] ѥстъ. Дрьжавьнъ [[англїискъ ѩзыкъ|англїискъ]] ѩзыкъ ѥстъ. Людии 60 леѡдръ обитаѥтъ.
+'''Вѣлика Британї''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Великы Британїѩ и Сѣверьны Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}})  [[Еѵрѡпа|Еѵрѡпы]] сѣвера  дрьжава ѥстъ. Cтольнъ градъ [[Лондонъ]] ѥстъ. Дрьжавьнъ [[англїискъ ѩзыкъ|англїискъ]] ѩзыкъ ѥстъ. Людии 60 леѡдръ обитаѥтъ.
 
 [[Category:Дрьжа́вꙑ]]
 [[Category:Єѵрѡ́па]]
