*Empty MediaWiki Message*

--- a/Вєлика_Британїꙗ.mw
+++ b/Вєлика_Британїꙗ.mw
@@ -9,7 +9,7 @@
 | Людии = 60 лѣѡдръ
 | Почѧта = 1801
 }}
-'''Вѣлика Британї''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Великы Британїѩ и Сѣверьны Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}})  [[Еѵрѡпа|Еѵрѡпы]] сѣвера  дрьжава ѥстъ. Cтольнъ градъ [[Лондонъ]] ѥстъ. Дрьжавьнъ [[англїискъ ѩзыкъ|англїискъ]] ѩзыкъ ѥстъ. Людии 60 леѡдръ обитаѥтъ.
+'''Вѣлика Британїꙗ''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Вєликꙑ Британїѩ и Сѣвєрьнꙑ Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}}) [[Еѵрѡпа|єѵрѡпꙑ]] сѣвєра дрьжава ѥстъ. Cтольнъ градъ [[Лондонъ]] ѥстъ. Дрьжавьнъ [[англїискъ ѩзыкъ|англїискъ]] ѩꙁꙑкъ ѥстъ. Людии 60 лєѡдръ обитаѥтъ.
 
 [[Category:Дрьжа́вꙑ]]
 [[Category:Єѵрѡ́па]]
