*Empty MediaWiki Message*

--- a/Босньци.mw
+++ b/Босньци.mw
@@ -1,6 +1,5 @@
-'''Босньци''' ([[Босньскъ ѩзыкъ|босньскы]] ''Bošnjaci'') южьнословѣньскъ народъ ѥстъ.
-[[Category:Словѣне]]
-[[Category:Народи]]
+'''Босньци''' ([[Босньскъ ѩзыкъ|босньскꙑ]] ''Bošnjaci'') южьнословѣньскъ народъ ѥстъ.
+[[Category:Словѣ́нє]]
 
 [[ar:بوشناق]]
 [[az:Bosniyalılar]]
