*Empty MediaWiki Message*

--- a/Мѫголи.mw
+++ b/Мѫголи.mw
@@ -1,12 +1,12 @@
-{{Дрьжава|name = Мѫго́ли<br>{{lat-ga|Монгол Улс}}<br> [[Ви́дъ:Monggol ulus.svg|64px]]
-| знамѧ= [[Видъ:Flag of Mongolia.svg|150px]]
-| знакъ = [[image:Coat_of_arms_of_Mongolia.gif|80px]]
+{{Дрьжава|name = Мѫго́ли<br>{{lat-ga|Монгол Улс}}<br /> [[Ви́дъ:Monggol ulus.svg|64px]]
+| ꙁнамѧ= [[Дѣ́ло:Flag of Mongolia.svg|150px]]
+| ꙁнакъ = [[Дѣ́ло:Coat_of_arms_of_Mongolia.gif|80px]]
 | map = LocationMongolia.png
 | Стольнъ градъ = [[Оуланбатаръ]]
-| Ѩзыкъ = [[мѫго́льскъ ѩꙁꙑ́къ|мѫго́льскъ]]
-| Глава = 
+| Ѩꙁꙑкъ = [[мѫго́льскъ ѩꙁꙑ́къ|мѫго́льскъ]]
+| Глава =
 | Пространиѥ =1 564 116 к҃м²
-| Людии =  2 832 224
+| Людии = 2 832 224
 | Почѧта = 1911
 }}
 '''Мѫго́ли''' и {{lang-mn|Монгол Улс / [[Ви́дъ:Monggol ulus.svg|32px]]}} · срѣдьнѩ [[Асі́ꙗ|Асі́ѩ]] вєлика дрьжа́ва ѥ́стъ ⁙ Дрьжавьнъ мѫго́льскъ ѩꙁꙑ́къ ѥ́стъ ⁙ Люди́и 2,8 лєѡ́дръ обита́ѥтъ ⁙ Сто́льнъ гра́дъ [[Оуланбатаръ]] ѥ́сть
