*Empty MediaWiki Message*

--- a/Мѫголи.mw
+++ b/Мѫголи.mw
@@ -16,7 +16,7 @@
 Мѫго́ли на 21 чѧстъ дєлєнꙑ сѫ́тъ · ихъжє имѧ аимаги ѥсть ⁙ Стольнъ градъ сѧ положє́ниѥмь самостоꙗ́тєл҄ьнѫ властьнѫ ѥдини́цѫ одѣлꙗ́ѥтъ
 {{commonscat|Mongolia}}
 
-[[Category:Страны]]
+[[Category:Дрьжа́вꙑ]]
 
 [[af:Mongolië]]
 [[als:Mongolei]]
