*Empty MediaWiki Message*

--- a/Хрїстїаньство.mw
+++ b/Хрїстїаньство.mw
@@ -1,5 +1,5 @@
-[[Видъ:Christianity percentage by country.png|thumb|Хрїстїаньства простор]]
-'''Хрїстїаньство''' [[ѥдинобожиѥ|ѥдинобожиꙗ]] вѣра ѥстъ, ꙗже основана оучении [[Їисъ Хрїстъ|Їисѹ Хрїста]] ѥстъ, ꙗко издречено о сѥмь [[Новыи Завѣтъ|Новѣѥмь Завѣтѣ]] ѥстъ. Нынѣ хрїстїаньство сѧ мъногы образы авлꙗѥтъ, сѥго дѣл҄ьма нѣстъ възможьности глаголати ꙗко ѥдина вѣра ѥстъ. Хрїстїаньство дѣлѥно на мъногы тлъкованиꙗ ѥстъ, бол҄ьшаꙗ из ихъже [[Православиѥ]], [[Римьскъ Каѳолїкїсмъ]] и [[Папоборьчьска Вѣра]] (Протестантїсмъ).
+[[Дѣ́ло:Christianity percentage by country.png|thumb|Хрїстїаньства простор]]
+'''Хрїстїаньство''' [[ѥдинобожиѥ|ѥдинобожиꙗ]] вѣра ѥстъ, ꙗжє основана оучєнии [[Їисъ Хрїстъ|Їисоу Хрїста]] ѥстъ, ꙗко иꙁдрєчєно о сѥмь [[Новыи Завѣтъ|Новѣѥмь ꙁавѣтѣ]] ѥстъ. Нꙑнѣ хрїстїаньство сѧ мъногꙑ обраꙁꙑ авлꙗѥтъ, сѥго дѣл҄ьма нѣстъ въꙁможьности глаголати ꙗко ѥдина вѣра ѥстъ. Хрїстїаньство дѣлѥно на мъногꙑ тлъкованиꙗ ѥстъ, бол҄ьшаꙗ иꙁ ихъжє [[Православиѥ]], [[Римьскъ Каѳолїкїсмъ]] и [[Папоборьчьска Вѣра]] (Протєстантїсмъ).
 {{Commonscat|Christianity}}
 [[Category:Хрїстїаньство]]
 
