*Empty MediaWiki Message*

--- a/Сатана.mw
+++ b/Сатана.mw
@@ -2,6 +2,6 @@
 
 '''Сотона́''' ({{lang-el|Σατανᾶς}}, [[Симїтьчьскъ ѩꙁꙑ́къ|cимїтьчьскъ]] שָׂטָן).
 
-[[Category:Крьстиꙗньство]]
+[[Category:Хрїстїаньство]]
 
 [[fr:Satan]]
