*Empty MediaWiki Message*

--- a/Наꙁарєѳъ.mw
+++ b/Наꙁарєѳъ.mw
@@ -1,5 +1,5 @@
-'''Назарѣ́тъ''' и '''Назаре́тъ''' ({{lang-el|Ναζαρέθ}}).
+'''Наꙁарѣ́тъ''' и '''Наꙁарє́тъ''' ({{lang-el|Ναζαρέθ}}).
 
-[[Category:Крьстиꙗньство]]
+[[Category:Хрїстїаньство]]
 
 [[fr:Nazareth]]
