*Empty MediaWiki Message*

--- a/Лаꙁаръ.mw
+++ b/Лаꙁаръ.mw
@@ -1,8 +1,8 @@
 [[Ви́дъ:Juan de Flandes 001.jpg|thumb|right|200px]]
 
-'''Ла́зоръ''' ({{lang-el|Λάζαρος}}).
+'''Ла́ꙁоръ''' ({{lang-el|Λάζαρος}}).
 
-[[Category:Крьстиꙗньство]]
+[[Category:Хрїстїаньство]]
 
 [[ca:Llàtzer]]
 [[cs:Lazar]]
