*Empty MediaWiki Message*

--- a/Сатана.mw
+++ b/Сатана.mw
@@ -5,3 +5,47 @@
 [[Category:Хрїстїаньство]]
 
 [[fr:Satan]]
+[[ar:الشيطان في اليهودية]]
+[[bg:Сатана]]
+[[ca:Satan]]
+[[cs:Satan]]
+[[da:Satan]]
+[[de:Satan]]
+[[en:Satan]]
+[[eo:Satano]]
+[[es:Satanás]]
+[[et:Saatan]]
+[[fa:شیطان]]
+[[fi:Saatana]]
+[[fur:Satane]]
+[[gl:Demonio]]
+[[he:שטן]]
+[[hi:शैतान]]
+[[hr:Sotona]]
+[[hu:Sátán]]
+[[id:Setan]]
+[[it:Satana]]
+[[ja:サタン]]
+[[ka:ეშმაკი]]
+[[ko:사탄]]
+[[la:Satanas]]
+[[lt:Šėtonas]]
+[[ms:Syaitan]]
+[[nl:Satan]]
+[[nn:Satan]]
+[[no:Satan]]
+[[pl:Szatan]]
+[[pt:Satanás]]
+[[qu:Saqra]]
+[[ro:Satan]]
+[[ru:Сатана]]
+[[simple:Satan]]
+[[sk:Satan]]
+[[sv:Satan]]
+[[szl:Šatan]]
+[[ta:சாத்தான்]]
+[[te:సైతాను]]
+[[th:ซาตาน]]
+[[tr:Şeytan]]
+[[uk:Сатана]]
+[[zh:撒旦]]
