*Empty MediaWiki Message*

--- a/Придънѣстриѥ.mw
+++ b/Придънѣстриѥ.mw
@@ -11,9 +11,9 @@
 | Людии = 533 500
 | Гроши = Приднестровский рубль
 }}
-[[Видъ: Hogstasovjet.jpg|250px|thumb|right|Домъ Советовъ Приднестровья въ Тирасполе. Спереди - скульптура имени В.И.Ленина]]
+[[Дѣ́ло:Hogstasovjet.jpg|250px|thumb|right|Домъ Совєтовъ Приднєстровья въ Тирасполє. Спєрєди - скульптура имєни В.И.Лєнина]]
 
-'''Придънѣ́стриѥ''', полно '''Приднестро́вская Молда́вская Респу́блика''', сокращённо '''ПМР''' — непринятая держава на юго-въсточной Европе есть.
+'''Придънѣ́стриѥ''', ({{lang-ru|Приднестро́вская Молда́вская Респу́блика, ПМР}}) — нєпринятая дєржава на юго-въсточной європє єсть.
 
 [[ar:ترانسنيستريا]]
 [[ast:Transnistria]]
