*Empty MediaWiki Message*

--- a/Їѡаннъ_Владиславъ.mw
+++ b/Їѡаннъ_Владиславъ.mw
@@ -1,6 +1,6 @@
 '''Їѡаннъ Владиславъ''' ({{lang-bg| Иван Владислав, Йоан Владислав}}, 1015—1018) [[Блъгарї|Блъгарїѩ]] цѣсар҄ь бѣ.
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 [[Обитѣльско напьсаниѥ]]
 
 [[Category:Блъгарї]]
