*Empty MediaWiki Message*

--- a/Огньнъ_Радєвъ.mw
+++ b/Огньнъ_Радєвъ.mw
@@ -1,2 +1,3 @@
 '''Огънѣнь Радевъ''' оучитель ѥстъ. Оучитъ въ [[Блъгарїꙗ|Блъгарии]], въ оучилишти НГДЕК.
-[[Category:Блъгарї]]
+
+[[Category:Людиѥ]]
