*Empty MediaWiki Message*

--- a/Єѳїопїꙗ.mw
+++ b/Єѳїопїꙗ.mw
@@ -3,14 +3,14 @@
 | знакъ = [[image:Coat_of_arms_of_Ethiopia.svg|80px]]
 | map = LocationEthiopia.png 
 | Стольнъ градъ = [[Адїсъ-Абеба]]  
-| Ѩзыкъ = [[Амхарьскъ ѩзыкъ|амхарьскъ]] 
+| Ѩзыкъ = [[Амха́рьскъ ѩꙁꙑ́къ|Амха́рьскъ]] 
 | Глава = 
 | area =
 | Людии =  75 067 000
 | Почѧта = 
 }}
-'''Єѳїопїꙗ''' ([[Амхарьскъ ѩзыкъ|амхарьскы]] :''ኢትዮጵያ'') Афрїкы и дрьжава ѥстъ. Дрьжавьнъ ѩзыкъ [[Амхарьскъ ѩзыкъ|амхарьскъ]] ѥстъ. Стольнъ градъ [[Адїсъ-Абеба]] ѥстъ.
-Еѳїопїи людии 75 леѡдръ обитаѥтъ.
+'''Єѳїопїꙗ''' ([[Амхарьскъ ѩзыкъ|амхарьскꙑ]] :''ኢትዮጵያ'') Афрїкꙑ и дрьжава ѥстъ. Дрьжавьнъ ѩꙁꙑкъ [[Амхарьскъ ѩзыкъ|амхарьскъ]] ѥстъ. Стольнъ градъ [[Адїсъ-Абеба]] ѥстъ.
+єѳїопїи людии 75 лєѡдръ обитаѥтъ.
 
 {{commonscat|Ethiopia}}
 [[Category:Єѳїопі́ꙗ|*]]
