*Empty MediaWiki Message*

--- a/Єѳїопїꙗ.mw
+++ b/Єѳїопїꙗ.mw
@@ -9,7 +9,7 @@
 | Людии =  75 067 000
 | Почѧта = 
 }}
-'''Єѳїопїꙗ''' ([[Амхарьскъ ѩзыкъ|амхарьскꙑ]] :''ኢትዮጵያ'') Афрїкꙑ и дрьжава ѥстъ. Дрьжавьнъ ѩꙁꙑкъ [[Амхарьскъ ѩзыкъ|амхарьскъ]] ѥстъ. Стольнъ градъ [[Адїсъ-Абеба]] ѥстъ.
+'''Єѳїопїꙗ''' ([[Амха́рьскъ ѩꙁꙑ́къ|амха́рьскъ]] :''ኢትዮጵያ'') Афрїкꙑ и дрьжава ѥстъ. Дрьжавьнъ ѩꙁꙑкъ [[Амхарьскъ ѩзыкъ|амхарьскъ]] ѥстъ. Стольнъ градъ [[Адїсъ-Абеба]] ѥстъ.
 єѳїопїи людии 75 лєѡдръ обитаѥтъ.
 
 {{commonscat|Ethiopia}}
