*Empty MediaWiki Message*

--- a/Нєва.mw
+++ b/Нєва.mw
@@ -1,5 +1,5 @@
-[[Видъ:Neva map.png|thumb]]
-'''Нева''' рѣка въ [[Рѡсї|Рѡсїи]] ѥсть. На Невѣ [[Санкт-Петербѹргъ]] построѥнъ ѥстъ.
+[[Дѣ́ло:Neva map.png|thumb]]
+'''Нєва''' рѣка въ [[Рѡсі́ꙗ|Рѡсі́и]] ѥсть. На Нєвѣ [[Санкт-Петербѹргъ]] построѥнъ ѥстъ.
 
 [[Category:Рѣкы]]
 
