*Empty MediaWiki Message*

--- a/Нєва.mw
+++ b/Нєва.mw
@@ -1,5 +1,5 @@
 [[Дѣ́ло:Neva map.png|thumb]]
-'''Нєва''' рѣка въ [[Рѡсі́ꙗ|Рѡсі́и]] ѥсть. На Нєвѣ [[Санкт-Петербѹргъ]] построѥнъ ѥстъ.
+'''Нєва''' рѣка въ [[Рѡсі́ꙗ|Рѡсі́и]] ѥсть. На Нєвѣ [[Санкт-Пєтєрбоу́ргъ]] построѥнъ ѥстъ.
 
 [[Category:Рѣкы]]
 
