*Empty MediaWiki Message*

--- a/Брѣстѣнꙑѩ_грамотꙑ.mw
+++ b/Брѣстѣнꙑѩ_грамотꙑ.mw
@@ -1,5 +1,5 @@
-[[Image:Birch bark document 210.jpg|thumb|]]
-'''Брѣстѣнꙑѩ грамотꙑ''' и {{Lang-ru|бересто, берестяные грамоты}} · пьсанꙑ [[Роу́сь|Роуси]] на [[брѣꙁа|брѣꙁꙑ]] корѣ [[пьсало]]мь бѣꙗхѫ · ѥгда ꙃѣло драгъ [[пєргаминъ]] бѣ · а [[харта]] нєвѣдома ⁙ Бєꙁ мала тꙑсѫща грамотъ окрꙑта ѥ́стъ · вѧщьши ихъ чѧсть  [[Но́въ Гра́дъ|Новѣ Градѣ]] · пакꙑ жє [[Пльсковъ|Пльсковѣ]], [[Смольньскъ|Смольньсцѣ]] · [[Тръжькъ|Тръжьцѣ]] · [[Роу́cа|Роусѣ]] · [[Витьбьскъ|Витьбьсцѣ]] · [[Мьстиславл҄ь|Мьстиславл҄и]] · [[Прѣѩславл҄ь Рѣꙁаньскъ|Прѣѩславл҄и Рѣꙁаньсцѣ]] и пакꙑ на [[Москъва|Москъвѣ]] ⁙ Прьва грамота Новѣ Градѣ открꙑта 1951 лѣ́та бѣ
+[[Дѣ́ло:Birch bark document 210.jpg|thumb|]]
+'''Брѣстѣнꙑѩ грамотꙑ''' и {{Lang-ru|бересто, берестяные грамоты}} · пьсанꙑ [[Роу́сь|Роуси]] на [[брѣꙁа|брѣꙁꙑ]] корѣ [[пьсало]]мь бѣꙗхѫ · ѥгда ꙃѣло драгъ [[пєргаминъ]] бѣ · а [[харта]] нєвѣдома ⁙ Бєꙁ мала тꙑсѫща грамотъ окрꙑта ѥ́стъ · вѧщьши ихъ чѧсть [[Но́въ Гра́дъ|Новѣ Градѣ]] · пакꙑ жє [[Пльсковъ|Пльсковѣ]], [[Смольньскъ|Смольньсцѣ]] · [[Тръжькъ|Тръжьцѣ]] · [[Роу́cа|Роусѣ]] · [[Витьбьскъ|Витьбьсцѣ]] · [[Мьстиславл҄ь|Мьстиславл҄и]] · [[Прѣѩславл҄ь Рѣꙁаньскъ|Прѣѩславл҄и Рѣꙁаньсцѣ]] и пакꙑ на [[Москъва|Москъвѣ]] ⁙ Прьва грамота Новѣ Градѣ открꙑта 1951 лѣ́та бѣ
 
 Ѩжє Новѣ Градѣ авлѥнꙑ сѫ́тъ · пьсанꙑ [[Дрєвл҄ьнѥновогра́дьскъ ѩꙁꙑ́къ|говоромь дрєвл҄ьнѥновоградьскомь]] сѫ́тъ · въпрѣкꙑ томоу мъногꙑ и [[Дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|дрєвл҄ьнѥмь роусьскомь]] · ꙗко по вьсѥи [[Роу́сь|Роуси]]
 
@@ -35,7 +35,7 @@
 <references/>
 [[Category:Кꙑ́ѥвьска Роу́сь]]
 [[Category:Но́въ Гра́дъ]]
-[[Category:Грамота]]
+[[Category:Гра́мота]]
 
 {{Link FA|ru}}
 
