*Empty MediaWiki Message*

--- a/Словѣньска_аꙁъбоукꙑ.mw
+++ b/Словѣньска_аꙁъбоукꙑ.mw
@@ -1,23 +1,23 @@
-Си '''[[Словѣ́ньскъ ѩꙁꙑ́къ|словѣньсцѣи]] азъбоукъви''' ѥсте. Боукъвъ рѧдъ данъ съгласьно съ исконьноѭ Кӱрилловоѭ ѥстъ.
-Кӱриллова азъбоукы кращьшии Климентовы ѥстъ, нъ добрѣ словѣньскаѥго ѩзыка звѫкы кажетъ. Звѫка /u/ и /ɯ/ ꙗко же и Клинментовицеѭ дъвама ⱁⱛ и дъвама ⱏⰻ боукъвама пишѫтъ, нъ въ азъбоукъвь онѣ не въходѧтъ.
-{|  border="1" cellspacing="0" cellpadding="3"
-!colspan=1 bgcolor="#FFDEAD" | Кӱрилловы боукъви
+Си '''[[Словѣ́ньскъ ѩꙁꙑ́къ|словѣньсцѣи]] аꙁъбоукъви''' ѥстє. Боукъвъ рѧдъ данъ съгласьно съ исконьноѭ Кӱрилловоѭ ѥстъ.
+Кӱриллова аꙁъбоукꙑ кращьшии Климєнтовꙑ ѥстъ, нъ добрѣ словѣньскаѥго ѩꙁꙑка ꙁвѫкꙑ кажєтъ. ꙁвѫка /u/ и /ɯ/ ꙗко жє и Клинмєнтовицєѭ дъвама ⱁⱛ и дъвама ⱏⰻ боукъвама пишѫтъ, нъ въ аꙁъбоукъвь онѣ нє въходѧтъ.
+{| border="1" cellspacing="0" cellpadding="3"
+!colspan=1 bgcolor="#FFDEAD" | Кӱрилловꙑ боукъви
 !colspan=1 bgcolor="#FFDEAD" | Имѧ
-!colspan=1 bgcolor="#FFDEAD" | Кӱрилловыихъ боукъвъ чьтениѥ
-!colspan=1 bgcolor="#FFDEAD" | Кӱрилловыимъ боукъвамъ чисмена
-!colspan=1 bgcolor="#FFDEAD" | Климентовы боукъви
-!colspan=1 bgcolor="#FFDEAD" | Бѹкъви Unicode5
+!colspan=1 bgcolor="#FFDEAD" | Кӱрилловꙑихъ боукъвъ чьтєниѥ
+!colspan=1 bgcolor="#FFDEAD" | Кӱрилловꙑимъ боукъвамъ чисмєна
+!colspan=1 bgcolor="#FFDEAD" | Климєнтовꙑ боукъви
+!colspan=1 bgcolor="#FFDEAD" | Боукъви Unicode5
 !colspan=1 bgcolor="#FFDEAD" | Имѧ
-!colspan=1 bgcolor="#FFDEAD" | Климентовыихъ боукъвъ чьтениѥ
-!colspan=1 bgcolor="#FFDEAD" | Климентовыимъ боукъвамъ чисмена
+!colspan=1 bgcolor="#FFDEAD" | Климєнтовꙑихъ боукъвъ чьтєниѥ
+!colspan=1 bgcolor="#FFDEAD" | Климєнтовꙑимъ боукъвамъ чисмєна
 |-
 |Ⰰ
 |ⰰⰸⱏ
 |/a/
 |1
-|[[Image:Early Cyrillic letter Azu.png]]
+|[[Дѣ́ло:Early Cyrillic letter Azu.png]]
 |А
-|азъ
+|аꙁъ
 |/а/
 |1
 |-
@@ -25,9 +25,9 @@
 |ⰱⱁⱛⰽⱏⰻ
 |/b/
 |2
-|[[Image:Early Cyrillic letter Buky.png]]
+|[[Дѣ́ло:Early Cyrillic letter Buky.png]]
 |Б
-|бѹкы
+|боукꙑ
 |/b/
 |
 |-
@@ -35,7 +35,7 @@
 |ⰲⱑⰴⱑ
 |/w/
 |3
-|[[Image:Early Cyrillic letter Viedi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Viedi.png]]
 |В
 |вѣдѣ
 |/v/ (/w/)
@@ -45,7 +45,7 @@
 |ⰳⰾⰰⰳⱁⰾⰻ
 |/g/
 |4
-|[[Image:Early Cyrillic letter Glagoli.png]]
+|[[Дѣ́ло:Early Cyrillic letter Glagoli.png]]
 |Г
 |глаголи
 |/g/
@@ -55,7 +55,7 @@
 |ⰴⱁⰱⱃⱁ
 |/d/
 |5
-|[[Image:Early Cyrillic letter Dobro.png]]
+|[[Дѣ́ло:Early Cyrillic letter Dobro.png]]
 |Д
 |добро
 |/d/
@@ -65,8 +65,8 @@
 |ⰵⱄⱅⱏ
 |/je/ или /ʲe/
 |6
-|[[Image:Early Cyrillic letter Yesti.png]]
-|Е
+|[[Дѣ́ло:Early Cyrillic letter Yesti.png]]
+|є
 |ѥстъ
 |/e/
 |5
@@ -75,9 +75,9 @@
 |ⰶⰻⰲⱑⱅⰵ
 |/žʲ/
 |7
-|[[Image:Early Cyrillic letter Zhiviete.png]]
+|[[Дѣ́ло:Early Cyrillic letter Zhiviete.png]]
 |Ж
-|живѣте
+|живѣтє
 |/žʲ/
 |
 |-
@@ -85,9 +85,9 @@
 |ⰷⱑⰾⱁ
 |/ʣʲ/
 |8
-|[[Image:Early Cyrillic letter Dzelo.png]]
-|Ѕ
-|ѕѣло
+|[[Дѣ́ло:Early Cyrillic letter Dzelo.png]]
+|ꙃ
+|ꙃѣло
 |/ʣʲ/
 |6
 |-
@@ -95,9 +95,9 @@
 |ⰸⰵⰿⰾⱑ
 |/z/
 |9
-|[[Image:Early Cyrillic letter Zemlia.png]]
-|З
-|земл
+|[[Дѣ́ло:Early Cyrillic letter Zemlia.png]]
+|ꙁ
+|ꙁємлꙗ
 |/z/
 |7
 |-
@@ -105,7 +105,7 @@
 |ⰺ
 |/i/
 |10
-|[[Image:Early Cyrillic letter I.png]]
+|[[Дѣ́ло:Early Cyrillic letter I.png]]
 |І
 |і
 |/i/
@@ -115,9 +115,9 @@
 |ⰻⰶⰵ
 |/i/
 |20
-|[[Image:Early Cyrillic letter Izhe.png]]
+|[[Дѣ́ло:Early Cyrillic letter Izhe.png]]
 |И
-|иже
+|ижє
 |/i/
 |8
 |-
@@ -125,7 +125,7 @@
 |ⰼⱃⱐⰲⱐ
 |/dʲ/
 |30
-|[[Image:Early Cyrillic letter Dierv.png]]
+|[[Дѣ́ло:Early Cyrillic letter Dierv.png]]
 |Ћ
 |ћрьвь
 |/gʲ/
@@ -135,7 +135,7 @@
 |ⰽⰰⰽⱁ
 |/k/
 |40
-|[[Image:Early Cyrillic letter Kako.png]]
+|[[Дѣ́ло:Early Cyrillic letter Kako.png]]
 |К
 |како
 |/k/
@@ -145,7 +145,7 @@
 |ⰾⱓⰴⰻⰵ
 |/l/
 |50
-|[[Image:Early Cyrillic letter Liudiye.png]]
+|[[Дѣ́ло:Early Cyrillic letter Liudiye.png]]
 |Л
 |людиѥ
 |/l/
@@ -155,9 +155,9 @@
 |ⰿⱏⰻⱄⰾⰻⱅⰵ
 |/m/
 |60
-|[[Image:Early Cyrillic letter Myslite.png]]
+|[[Дѣ́ло:Early Cyrillic letter Myslite.png]]
 |М
-|мыслите
+|мꙑслитє
 |/m/
 |40
 |-
@@ -165,7 +165,7 @@
 |ⱀⰰⱎⱐ
 |/n/
 |70
-|[[Image:Early Cyrillic letter Nashi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Nashi.png]]
 |Н
 |нашь
 |/n/
@@ -175,7 +175,7 @@
 |ⱁⱀⱏ
 |/o/
 |80
-|[[Image:Early Cyrillic letter Onu.png]]
+|[[Дѣ́ло:Early Cyrillic letter Onu.png]]
 |О
 |онъ
 |/o/
@@ -195,7 +195,7 @@
 |ⱂⱁⰽⱁⰻ
 |/p/
 |90
-|[[Image:Early Cyrillic letter Pokoi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Pokoi.png]]
 |П
 |покои
 |/p/
@@ -205,7 +205,7 @@
 |ⱃⱐⱌⰻ
 |/r/
 |100
-|[[Image:Early Cyrillic letter Ritsi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Ritsi.png]]
 |Р
 |рьци
 |/r/
@@ -215,7 +215,7 @@
 |ⱄⰾⱁⰲⱁ
 |/s/
 |200
-|[[Image:Early Cyrillic letter Slovo.png]]
+|[[Дѣ́ло:Early Cyrillic letter Slovo.png]]
 |С
 |слово
 |/s/
@@ -225,7 +225,7 @@
 |ⱅⰲⱃⱐⰴⱁ
 |/t/
 |300
-|[[Image:Early Cyrillic letter Tvrido.png]]
+|[[Дѣ́ло:Early Cyrillic letter Tvrido.png]]
 |Т
 |тврьдо
 |/t/
@@ -246,9 +246,9 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Uku.png]]
-|́́Ѹ
-|ѹкъ
+|[[Дѣ́ло:Early Cyrillic letter Uku.png]]
+|́́Оу
+|оукъ
 |/u/
 |400
 |-
@@ -256,7 +256,7 @@
 |ⱇⱃⱐⱅⱏ
 |/p/ > /f/
 |500
-|[[Image:Early Cyrillic letter Fritu.png]]
+|[[Дѣ́ло:Early Cyrillic letter Fritu.png]]
 |Ф
 |фрьтъ
 |/f/
@@ -266,7 +266,7 @@
 |ⱈⱑⱃⱏ
 |/x/
 |600
-|[[Image:Early Cyrillic letter Khieru.png]]
+|[[Дѣ́ло:Early Cyrillic letter Khieru.png]]
 |Х
 |хѣръ
 |/x/
@@ -276,9 +276,9 @@
 |
 |/o/
 |700
-|[[Image:Early Cyrillic letter Otu.png]]
+|[[Дѣ́ло:Early Cyrillic letter Otu.png]]
 |Ѡ
-|ѡмега, от
+|ѡмєга, от
 |/o/
 |800
 |-
@@ -286,7 +286,7 @@
 |ⱋⱑ
 |/tʲ/
 |800
-|[[Image:Early Cyrillic letter Shta.png]]
+|[[Дѣ́ло:Early Cyrillic letter Shta.png]]
 |Щ
 |ща
 |/ʃtʲ/
@@ -296,7 +296,7 @@
 |ⱌⰻ
 |/ʦʲ/
 |900
-|[[Image:Early Cyrillic letter Tsi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Tsi.png]]
 |Ц
 |ци
 |/ʦʲ/
@@ -306,9 +306,9 @@
 |ⱍⱃⱐⰲⱐ
 |/ʧʲ/
 |1000
-|[[Image:Early Cyrillic letter Chrivi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Chrivi.png]]
 |Ч
-|чрьвь	
+|чрьвь
 |/ʧʲ/
 |90
 |-
@@ -316,7 +316,7 @@
 |ⱎⱑ
 |/ʃʲ/
 |
-|[[Image:Early Cyrillic letter Sha.png]]
+|[[Дѣ́ло:Early Cyrillic letter Sha.png]]
 |Ш
 |ша
 |/ʃʲ/
@@ -326,7 +326,7 @@
 |ⰵⱃⱏ
 |/ɯ̆/
 |
-|[[Image:Early Cyrillic letter Yeru.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yeru.png]]
 |Ъ
 |ѥръ
 |/ɯ̆/
@@ -336,9 +336,9 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Yery.png]]
-|Ы
-|ѥры
+|[[Дѣ́ло:Early Cyrillic letter Yery.png]]
+|ꙑ
+|ѥрꙑ
 |/ɯ/
 |
 |-
@@ -346,7 +346,7 @@
 |ⰵⱃⱐ
 |/ĭ/
 |
-|[[Image:Early Cyrillic letter Yeri.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yeri.png]]
 |Ь
 |ѥрь
 |/ĭ/
@@ -356,9 +356,9 @@
 |ⱑⰴⱐ
 |/jæ/ или /ʲæ/
 |
-|[[Image:Early Cyrillic letter Yati.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yati.png]]
 |́Ѣ
-|дь
+|ꙗдь
 |/jæ/ или /ʲæ/
 |
 |-
@@ -386,7 +386,7 @@
 |ⱓ
 |/ju/ или /ʲu/
 |
-|[[Image:Early Cyrillic letter Yu.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yu.png]]
 |Ю
 |ю
 |/ju/ или /ʲu/
@@ -394,7 +394,7 @@
 |-
 |Ⱔ
 |ⱁⱔⱄⱏ
-|/  ̃/ (носовъ призвѫкъ) или /n/ (прѣдъ сѫгласьникы)
+|/ ̃/ (носовъ приꙁвѫкъ) или /n/ (прѣдъ сѫгласьникꙑ)
 |
 |
 |
@@ -408,7 +408,7 @@
 |
 |
 |
-|
+|ꙗ
 |/ja/ или /ʲa/ (или = ѣ)
 |
 |-
@@ -416,7 +416,7 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Ye.png]]
+|[[Дѣ́ло:Early Cyrillic letter Ye.png]]
 |Ѥ
 |ѥ
 |/je/ или /ʲe/
@@ -426,7 +426,7 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Yusu Maliy.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yusu Maliy.png]]
 |Ѧ
 |ѭсъ (малъ)
 |/ẽ/
@@ -436,7 +436,7 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Yusu Maliy Yotirovaniy.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yusu Maliy Yotirovaniy.png]]
 |Ѩ
 |
 |/jẽ/ или /ʲẽ/
@@ -446,9 +446,9 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Yusu Bolshiy.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yusu Bolshiy.png]]
 |Ѫ
-|ѭсъ (великъ)
+|ѭсъ (вєликъ)
 |/õ/
 |
 |-
@@ -456,7 +456,7 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Yusu Bolshiy Yotirovaniy.png]]
+|[[Дѣ́ло:Early Cyrillic letter Yusu Bolshiy Yotirovaniy.png]]
 |Ѭ
 |
 |/jõ/ или /ʲõ/
@@ -466,7 +466,7 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Ksi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Ksi.png]]
 |Ѯ
 |ѯі
 |/ks/
@@ -476,7 +476,7 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Psi.png]]
+|[[Дѣ́ло:Early Cyrillic letter Psi.png]]
 |Ѱ
 |ѱі
 |/ps/
@@ -486,24 +486,25 @@
 |
 |
 |
-|[[Image:Early Cyrillic letter Fita.png]]
+|[[Дѣ́ло:Early Cyrillic letter Fita.png]]
 |Ѳ
 |ѳита
-|/f/ ~ /θ/ ~ /t/ 
+|/f/ ~ /θ/ ~ /t/
 |9
 |-
 |
 |
 |
 |
-|[[Image:Early Cyrillic letter Izhitsa.png]]
+|[[Дѣ́ло:Early Cyrillic letter Izhitsa.png]]
 |Ѵ
 |ѵкъ (ижица)
 |/i/ или /v/ (/w/)
 |
 |}
 
-[[Category:Словѣньска азъбѹкы]] [[Category:Грамота]]
+[[Category:Словѣньска азъбѹкы]]
+[[Category:Гра́мота]]
 
 [[af:Cyrilliese alfabet]]
 [[als:Kyrillisches Alphabet]]
