*Empty MediaWiki Message*

--- a/Свєньскъ_ѩꙁꙑкъ.mw
+++ b/Свєньскъ_ѩꙁꙑкъ.mw
@@ -34,7 +34,7 @@ Yy
 == Ꙁьри такождє ==
 {{InterWiki|sv|Huvudsida||свеньскыимь}}
 
-[[Category:Ѩзыци]]
+[[Category:Ѩꙁꙑци́]]
 
 {{Link FA|af}}
 {{Link FA|ca}}
