*Empty MediaWiki Message*

--- a/Проѳєсь_·_рѣчи_чѧсть.mw
+++ b/Проѳєсь_·_рѣчи_чѧсть.mw
@@ -1,6 +1,6 @@
 {{Дроуѕи съмысли|Проѳесь}}
-'''Про́ѳесь''' ([[словѣньскъ ѩзыкъ|словѣньскы]] «прѣдъложениѥ», «прѣдълогъ») слоужьбьно слово ѥстъ, кажѧ [[сӱнтаѯь|сӱнтаѯїчьна]] cъношени междоу [[оусїастїко|оусїастїкомь]] и дроугы словесы илиже междоу оусїастїкы.
-[[Category:Ѩзыкознаниѥ]]
+'''Про́ѳєсь''' ([[словѣньскъ ѩзыкъ|словѣньскꙑ]] "прѣдъложєниѥ", "прѣдълогъ") слоужьбьно слово ѥстъ, кажѧ [[сӱнтаѯь|сӱнтаѯїчьна]] cъношєниꙗ мєждоу [[оусїастїко|оусїастїкомь]] и дроугꙑ словєсꙑ илижє мєждоу оусїастїкꙑ.
+[[Category:Ѩꙁꙑкоꙁна́ниѥ]]
 [[ru:Предлог]]
 [[ar:حروف الجر]]
 [[bg:Предлог]]
