*Empty MediaWiki Message*

--- a/Проѳєсь_·_ꙁвѫкъ.mw
+++ b/Проѳєсь_·_ꙁвѫкъ.mw
@@ -1,4 +1,4 @@
 {{Дроуѕи съмысли|Проѳесь}}
 
-'''Про́ѳесь''' или проѳетїчьнъ звѫкъ ([[грьчьскъ ѩзыкъ|грьчьскы]] πρόθεσις «прѣдъложениѥ», «прѣдълогъ») словесе начѧлѣ добавьна звѫка авлѥниѥ ѥстъ. [[словѣньскъ ѩзыкъ|Словѣньстѣѥмь]] ѩзыцѣ проѳесь сѧ прѣдъ начѧльны звѫкы авлꙗѥтъ: ј- прѣдъ прѣдьнꙗ рѧдоу гласьникы е-, и-, ь-, ѧ-, ѥгда же в- авлѥнъ прѣдъ задьнꙗ рѧдоу гласьникы ъ-, ы-, иногда прѣдъ ѫ- ѥстъ. Инѣхъ словѣньстѣхъ [[дїалектъ|дїалектѣхъ]] ј- сѧ такоже прѣдъ начѧльномь а- авлꙗѥтъ: сл҃в ''авити'', ''аблъко'' ~ дроугосл҃в *''javiti'', *''jably̆ko''. Послѣдьн словѣньскы [[Словѣньска азъбѹкы|Кӱрилловици]] ѥстъ: ⱑⰱⰾⱏⰽⱁ, ⱑⰲⰻⱅⰻ ит҃д.
-[[Category:Ѩзыкознаниѥ]]
+'''Про́ѳєсь''' или проѳєтїчьнъ ꙁвѫкъ ([[грьчьскъ ѩзыкъ|грьчьскꙑ]] πρόθεσις "прѣдъложєниѥ", "прѣдълогъ") словєсє начѧлѣ добавьна ꙁвѫка авлѥниѥ ѥстъ. [[словѣньскъ ѩзыкъ|Словѣньстѣѥмь]] ѩꙁꙑцѣ проѳєсь сѧ прѣдъ начѧльнꙑ ꙁвѫкꙑ авлꙗѥтъ: ј- прѣдъ прѣдьнꙗ рѧдоу гласьникꙑ є-, и-, ь-, ѧ-, ѥгда жє в- авлѥнъ прѣдъ ꙁадьнꙗ рѧдоу гласьникꙑ ъ-, ꙑ-, иногда прѣдъ ѫ- ѥстъ. Инѣхъ словѣньстѣхъ [[дїалектъ|дїалєктѣхъ]] ј- сѧ такожє прѣдъ начѧльномь а- авлꙗѥтъ: сл҃в ''авити'', ''аблъко'' ~ дроугосл҃в *''javiti'', *''jably̆ko''. Послѣдьнꙗꙗ словѣньскꙑ [[Словѣньска азъбѹкы|Кӱрилловици]] ѥстъ: ⱑⰱⰾⱏⰽⱁ, ⱑⰲⰻⱅⰻ ит҃д.
+[[Category:Ѩꙁꙑкоꙁна́ниѥ]]
