*Empty MediaWiki Message*

--- a/Сѷнтаѯь.mw
+++ b/Сѷнтаѯь.mw
@@ -1,5 +1,5 @@
-'''Сѵ́нтаѯь''' ([[грьчьскъ ѩзыкъ|грьчьскы]] σύνταξις «строи») [[протась|протаси]] строѥни правила сѫтъ, и с правила възискаѩ [[грамматїка|грамматїкы]] дѣлъ ѥстъ.
-[[Category:Ѩзыкознаниѥ]]
+'''Сѵ́нтаѯь''' ([[грьчьскъ ѩзыкъ|грьчьскꙑ]] σύνταξις "строи") [[протась|протаси]] строѥниꙗ правила сѫтъ, и сꙗ правила въꙁискаѩ [[грамматїка|грамматїкꙑ]] дѣлъ ѥстъ.
+[[Category:Ѩꙁꙑкоꙁна́ниѥ]]
 
 [[als:Syntax]]
 [[ar:علم النظم]]
