*Empty MediaWiki Message*

--- a/Нѣмьчьскъ_ѩꙁꙑкъ.mw
+++ b/Нѣмьчьскъ_ѩꙁꙑкъ.mw
@@ -1,12 +1,12 @@
-[[Видъ:Map German World.png|thumb]]
-'''Нѣмьчьскъ''' (нѣмьчьскы ''Deutsch'') [[Нѣмьци|Нѣмьць]], [[Аѵстрї|Аѵстрїѩ]], [[Ел҄ьветї|Ел҄ьветїѩ]] <!-- (латинскы имѧ "Швейцарии" Helvetia ѥстъ , еллинскы Ελβετία ѥстъ)--> и мъногъ странъ тако же дрьжавьнъ ѩзыкъ ѥстъ <!--(Бельгия, Лихтенштейн, Люксембург)-->. Нѣмьчьскъ ѩзыкъ сѧ [[їндоеѵрѡпьсци ѩзыци|їндоеѵрѡпьскы]] сѣмиѩ  герман҄ьсци вѣтви ѩзыкъ влѥтъ. Ѥго письмо [[латиньска азъбѹкы|латиньско]] ѥстъ. Число глаголател҄ь нѣмьчьскы ко 110 леѡдръ чловѣкъ сѫтъ.
+[[Дѣ́ло:Map German World.png|thumb]]
+'''Нѣмьчьскъ''' (нѣмьчьскꙑ ''Deutsch'') [[Нѣмьци|Нѣмьць]], [[Аѵстрї|Аѵстрїѩ]], [[Ел҄ьветї|єл҄ьвєтїѩ]] <!-- (латинскы имѧ "Швейцарии" Helvetia ѥстъ , еллинскы Ελβετία ѥстъ)--> и мъногъ странъ тако жє дрьжавьнъ ѩꙁꙑкъ ѥстъ <!--(Бельгия, Лихтенштейн, Люксембург)-->. Нѣмьчьскъ ѩꙁꙑкъ сѧ [[їндоеѵрѡпьсци ѩзыци|їндоєѵрѡпьскꙑ]] сѣмиѩ гєрман҄ьсци вѣтви ѩꙁꙑкъ ꙗвлꙗѥтъ. Ѥго письмо [[латиньска азъбѹкы|латиньско]] ѥстъ. Число глаголатєл҄ь нѣмьчьскꙑ ꙗко 110 лєѡдръ чловѣкъ сѫтъ.
 
-== Нѣмьчьска азъбѹкы ==
+== Нѣмьчьска аꙁъбоукꙑ ==
 
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
 Aa (Ää) Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo (Öö) Pp Qq Rr Ss (ß) Tt Uu (Üü) Vv Ww Xx Yy Zz</div>
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 {{InterWiki|de|Hauptseite||Нѣмьчьскыимь}}
 {{commonscat|German language}}
 [[Катигорї:Ѩзыци]]
