--- a/Сѣвєрьна_Амєрїка.mw
+++ b/Сѣвєрьна_Амєрїка.mw
@@ -1,7 +1,7 @@
-[[Видъ:LocationNorthAmerica.png|right|thumb|200px|Сѣверьна Амерїка свѣтьнѣ хартѣ]]
-'''Сѣверьна Амерїка''' свѣта чѧсть ѥстъ. Бол҄ьши дрьжава [[Канада]] ѥстъ. 
+[[Дѣ́ло:LocationNorthAmerica.png|right|thumb|200px|Сѣвєрьна Амєрїка свѣтьнѣ хартѣ]]
+'''Сѣвєрьна Амєрїка''' свѣта чѧсть ѥстъ. Бол҄ьши дрьжава [[Канада]] ѥстъ.
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 
 {{commonscat|North America}}
 {{Свѣта чѧсти}}
