--- a/Аѵстралїꙗ_и_Ѡкєанїꙗ.mw
+++ b/Аѵстралїꙗ_и_Ѡкєанїꙗ.mw
@@ -1,7 +1,6 @@
 [[Дѣ́ло:LocationOceania.png|thumb|Аѵстралїꙗ и Ѡкєанїꙗ свѣтьнѣ хартѣ]]
 '''Аѵстралїꙗ и Ѡкєанїꙗ''' свѣта чѧсть ѥстъ.
 
-{{Свѣта чѧсти}}
-[[Category:Свѣ́та чѧ́сти]]
+{{Свѣ́та чѧ́сти}}
 
 [[ru:Австралия и Океания]]
