*Empty MediaWiki Message*

--- a/Южьна_Амєрїка.mw
+++ b/Южьна_Амєрїка.mw
@@ -1,10 +1,9 @@
-[[Видъ:LocationSouthAmerica.png|right|thumb|200px|Южьна Амерїка свѣтьнѣ хартѣ]]
-'''Южьна Амерїка''' свѣта чѧсть ѥстъ.
+[[Дѣ́ло:LocationSouthAmerica.png|right|thumb|200px|Южьна Амєрїка свѣтьнѣ хартѣ]]
+'''Южьна Амєрїка''' свѣта чѧсть ѥстъ.
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 {{commonscat|South America}}
-{{Свѣта чѧсти}}
-[[Category:Свѣ́та чѧ́сти]]
+{{Свѣ́та чѧ́сти}}
 
 [[af:Suid-Amerika]]
 [[als:Südamerika]]
