*Empty MediaWiki Message*

--- a/Сѣвєрьна_Амєрїка.mw
+++ b/Сѣвєрьна_Амєрїка.mw
@@ -4,8 +4,7 @@
 == ꙁьри такождє ==
 
 {{commonscat|North America}}
-{{Свѣта чѧсти}}
-[[Category:Свѣ́та чѧ́сти]]
+{{Свѣ́та чѧ́сти}}
 
 [[af:Noord-Amerika]]
 [[als:Nordamerika]]
