*Empty MediaWiki Message*

--- a/Афрїка.mw
+++ b/Афрїка.mw
@@ -1,14 +1,13 @@
-[[Видъ:LocationAfrica.png|right|thumb|200px|Афрїка свѣтьнѣ хартѣ]]
+[[Дѣ́ло:LocationAfrica.png|right|thumb|200px|Афрїка свѣтьнѣ хартѣ]]
 '''Афрїка''' свѣта чѧсть ѥстъ.
 == Афрїкꙑ дрьжавꙑ ==
 * [[Егѷптъ]]
 * [[Єрѷѳрі́ꙗ]]
 * [[Єѳїопі́ꙗ]]
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 {{commonscat|Africa}}
-{{Свѣта чѧсти}}
-[[Катигорї:Свѣта чѧсти]]
+{{Свѣ́та чѧ́сти}}
 
 [[af:Afrika]]
 [[ak:Afrika]]
