*Empty MediaWiki Message*

--- a/Асїꙗ.mw
+++ b/Асїꙗ.mw
@@ -3,8 +3,7 @@
 
 == ꙁьри такождє ==
 {{commonscat|Asia}}
-{{Свѣта чѧсти}}
-[[Category:Свѣ́та чѧ́сти]]
+{{Свѣ́та чѧ́сти}}
 
 [[af:Asië]]
 [[ak:Ehyia]]
