--- a/Антарктїка.mw
+++ b/Антарктїка.mw
@@ -1,8 +1,8 @@
-[[Видъ:LocationAntarctica.png|right|thumb|200px|Антарктїка свѣтьнѣ хартѣ]]
+[[Дѣ́ло:LocationAntarctica.png|right|thumb|200px|Антарктїка свѣтьнѣ хартѣ]]
 '''Антарктїка''' свѣта чѧсть ѥстъ.
 
-{{Свѣта чѧсти}}
-[[Category:Свѣ́та чѧ́сти]]
+{{Свѣ́та чѧ́сти}}
+
 [[ru:Антарктика]]
 [[be:Антарктыка]]
 [[bg:Антарктика]]
