--- a/Нѣмьци.mw
+++ b/Нѣмьци.mw
@@ -12,8 +12,7 @@
 }}
 '''Нѣ́мьци''' и {{lang-de|Deutschland}} · єпі́симьно и́мѧ '''Нѣ́мьць Съвѫ́ꙁьна Димократі́ꙗ''' и {{lang-de|Bundesrepublik Deutschland}} · дрьжа́ва [[Срѣ́дьнꙗ Єѵрѡ́па|Срѣ́дьнѩ Єѵрѡ́пꙑ]] ѥ́стъ ⁙ Нѣмьць сто́льнъ гра́дъ [[Берлинъ|Бєрлинъ]] ѥ́стъ ⁙ Людии обитаѥтъ 82,5 лєѡ́дръ ⁙ Бол҄ьши рѣ́ка [[Доунавъ]] · болѥ ѥꙁєро [[Бодєнꙁєи]] ѥ́стъ
 
-[[Category:Дрьжа́вꙑ]]
-[[Category:Єѵрѡ́па]]
+[[Category:Нѣ́мьци]]
 
 {{Link FA|vi}}
 
