--- a/Бєрлинъ.mw
+++ b/Бєрлинъ.mw
@@ -3,18 +3,17 @@
 | знамѧ= Flag of Berlin.svg
 | знакъ = Coat of arms of Berlin.svg
 | Дрьжава = {{Нѣмьць знамѧ}} [[Нѣмьци]]
-| Глава = 
-| Людии = 3 405 000 
-| Основанъ = 1244 
-| Харта = [[Видъ:Berlin.svg|200 px]]
+| Глава =
+| Людии = 3 405 000
+| Основанъ = 1244
+| Харта = [[Дѣ́ло:Berlin.svg|200 px]]
 |}}
-'''Берлинъ''' ({{lang-de|Berlin}}) [[Нѣмьци|Нѣмьць]] [[стольнъ градъ]] ѥстъ. Людии 3,4 леѡдръ обитаѥтъ. Берлинъ помѣновенъ запрьва лѣта 1244 ѥстъ. Рѣка в Берлинѣ Хафель, также Шпреи ѥстъ.
-Съ лѣта 1961 до лѣта 1989 бѧша валъ в ономъ градѣ, дабы на двѣ части градъ поделяти и людь из единой в овшую нѣ пущати.
+'''Бєрлинъ''' ({{lang-de|Berlin}}) [[Нѣмьци|Нѣмьць]] [[стольнъ градъ]] ѥстъ. Людии 3,4 лєѡдръ обитаѥтъ. Бєрлинъ помѣновєнъ ꙁапрьва лѣта 1244 ѥстъ. Рѣка в Бєрлинѣ Хафєль, такжє Шпрєи ѥстъ.
+Съ лѣта 1961 до лѣта 1989 бѧша валъ в ономъ градѣ, дабꙑ на двѣ части градъ подєляти и людь иꙁ єдиной в овшую нѣ пущати.
 
 {{commonscat|Berlin}}
-[[Катигорї:Гради]]
-[[Катигорї:Нѣмьци]]
-[[Катигорї:Стольни гради]]
+[[Category:Нѣ́мьци]]
+[[:Сто́льни гра́ди]]
 
 {{Link FA|af}}
 {{Link FA|la}}
