*Empty MediaWiki Message*

--- a/Бєрлинъ.mw
+++ b/Бєрлинъ.mw
@@ -13,7 +13,7 @@
 
 {{commonscat|Berlin}}
 [[Category:Нѣ́мьци]]
-[[:Сто́льни гра́ди]]
+[[Category:Сто́льни гра́ди]]
 
 {{Link FA|af}}
 {{Link FA|la}}
