*Empty MediaWiki Message*

--- a/Вьсєволожьскъ.mw
+++ b/Вьсєволожьскъ.mw
@@ -2,16 +2,15 @@
 | знамѧ= 
 | знакъ = Coat of Arms of Vsevolozhsk (Leningrad oblast).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
-| Глава = 
-| Людии = 45 тысѫщь
+| Глава =
+| Людии = 45 тꙑсѫщь
 | Основанъ = 1892
-| map = 
+| map =
 |}}
-'''Всѥволожскъ''' ({{Lang-ru|Всеволожск}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы]] области [[Всѥволожска чѧсть|Всѥволожскы]] чѧсти главьнъ градъ ѥстъ. Людии обитаѥтъ 45 тысѭщь. Основанъ ѥстъ лѣта 1892, нареченъ градъ 1963 ѥстъ.
+'''Всѥволожскъ''' ({{Lang-ru|Всеволожск}}) [[Рѡсі́ꙗ|Рѡсі́їѩ]] [[Лениноградьска область|Лєниноградьскꙑ]] области [[Всѥволожска чѧсть|Всѥволожскꙑ]] чѧсти главьнъ градъ ѥстъ. Людии обитаѥтъ 45 тꙑсѭщь. Основанъ ѥстъ лѣта 1892, нарєчєнъ градъ 1963 ѥстъ.
 
-[[Катигорї:Гради]]
-[[Катигорї:Рѡсї]]
-[[Катигорї:Лениноградьска область]]
+[[Category:Гра́ди]]
+[[Category:Рѡсі́ꙗ]]
 
 [[ar:فسيفولوجسك]]
 [[de:Wsewoloschsk]]
