--- a/Обьщєсловѣньскъ_ѩꙁꙑкъ.mw
+++ b/Обьщєсловѣньскъ_ѩꙁꙑкъ.mw
@@ -1,3 +1,3 @@
-«'''Обьщесловѣньскъ ѩзыкъ'''» ([[франкїискъ ѩзыкъ|франкїискы]] «''Le Slave Commun''») [[Франкї|франкїиска]] [[ѩзыковѣдъ|ѩзыковѣда]] [[Антѹанъ Меѥ|Антѹана Меѥ]] дѣло ѥстъ, изданоѥ прьвыимь изданиѥмь [[1924]] года и въторыимь [[1934]] года. [[Кънига]] [[прасловѣньскъ ѩзыкъ|прасловѣньска ѩзыка]] [[їстѡрї|їстѡрїѭ]] и строи описываѥтъ и ѥдьна о ѕѣло величаишиихъ дѣлъ по прасловѣньсцѣ [[фїлологї|фїлологїи]] сѧ влѥтъ.
+"'''Обьщєсловѣньскъ ѩꙁꙑкъ'''" ([[франкїискъ ѩзыкъ|франкїискꙑ]] "''Le Slave Commun''") [[Франкї|франкїиска]] [[ѩзыковѣдъ|ѩꙁꙑковѣда]] [[Антѹанъ Меѥ|Антоуана Мєѥ]] дѣло ѥстъ, иꙁданоѥ прьвꙑимь иꙁданиѥмь [[1924]] года и въторꙑимь [[1934]] года. [[Кънига]] [[прасловѣньскъ ѩзыкъ|прасловѣньска ѩꙁꙑка]] [[їстѡрї|їстѡрїѭ]] и строи описꙑваѥтъ и ѥдьна о ꙃѣло вєличаишиихъ дѣлъ по прасловѣньсцѣ [[фїлологї|фїлологїи]] сѧ ꙗвлꙗѥтъ.
 
 [[Category:Къниги]]
