/* Антоуа́на Мєѥ́ кънигꙑ */

--- a/Антоуанъ_Мєѥ.mw
+++ b/Антоуанъ_Мєѥ.mw
@@ -15,11 +15,10 @@
 * ''Les origines indo-européennes des mètres grecs'' · 1923
 * ''Esquisse d’une histoire de la langue latine'' · 1928
 * ''La méthode comparative en linguistique historique'' · 1928
+* ''[[Обьщєсловѣ́ньскъ ѩꙁꙑ́къ]]''
 * ''Dictionnaire étymologique de la langue latine'' · 1932 <!--(в соавторстве с А. Эрну; словарь переиздан под ред. Жака Андре в 2001 г.-->
 
-
 {{stub}}
-
 
 [[Category:Людиѥ|Мєѥ]]
 
