*Empty MediaWiki Message*

--- a/Роусє_·_съмꙑсли.mw
+++ b/Роусє_·_съмꙑсли.mw
@@ -1,7 +1,7 @@
 {{Мъногосъмыслиѥ}}
 
 * '''[[Роу́сє]]''' Блъгарі́ѩ гра́дъ ѥсть
-* Такождє '''[[роу́сє (карпа́тьсци)]]''' словѣньскаѥго народа имѧ ѥстъ
+* Такождє '''[[роу́сє (Карпа́тьсци)]]''' словѣньскаѥго народа имѧ ѥстъ
 
 [[en:Ruse]]
 [[it:Ruse]]
