*Empty MediaWiki Message*

--- a/Влькъ.mw
+++ b/Влькъ.mw
@@ -1,7 +1,7 @@
-[[Image:Canis lupus laying in grass.jpg|thumb|Влькъ]]
-'''Влькъ''' ([[латиньскъ ѩзыкъ|латиньскы]] Canis lupus) ѥстъ звѣрь пьсиѩ сѣмиѩ.
+[[Дѣ́ло:Canis lupus laying in grass.jpg|thumb|Влькъ]]
+'''Влькъ''' ([[латиньскъ ѩзыкъ|латиньскꙑ]] Canis lupus) ѥстъ ꙁвѣрь пьсиѩ сѣмиѩ.
 
-==Зьри тако же==
+==ꙁьри тако жє==
 * [[Пьсъ]]
 
 [[Category:Звѣриѥ]]
