*Empty MediaWiki Message*

--- a/Львъ.mw
+++ b/Львъ.mw
@@ -1,5 +1,5 @@
-[[Image:Lion lying 2.jpg|thumb|Львъ]]
-'''Львъ''' ({{lang-la|Panthera leo}}) ѥстъ звѣрь котьскыѩ сѣмиѩ.
+[[Дѣ́ло:Lion lying 2.jpg|thumb|Львъ]]
+'''Львъ''' ({{lang-la|Panthera leo}}) ѥстъ ꙁвѣрь котьскꙑѩ сѣмиѩ.
 
 {{commonscat|Panthera leo}}
 {{Link FA|de}}
@@ -9,7 +9,7 @@
 {{Link FA|pl}}
 {{Link FA|fi}}
 
-[[Category:Звѣриѥ]]
+[[Category:ꙁвѣриѥ́]]
 
 {{Link FA|en}}
 
